syntax = "proto3";

package payment;

service payment {
    rpc GetBalance (BalanceRequest) returns (BalanceResponse);
    rpc CheckSelfEmployed (TaxReference) returns (CheckCheckSelfEmployedResponse);
    rpc ConfirmPayout (Transaction) returns (ConfirmOrCancelResponse);
    rpc CancelPayout (Transaction) returns (ConfirmOrCancelResponse);
    rpc CreatePaymentSession (PaymentSessionRequest) returns (PaymentSessionResponse);
    rpc GetTokenizedCardData (TokenRequest) returns (TokenResponse);
    rpc getSessions (RequestSessions) returns (ResponseSessions);

}

message RequestSessions {
    repeated string id = 1;
}



message OrderInfo {
    string id = 1;
    string payment_id = 2;
    string status = 3;
    uint32 amount =4;
    string type = 5;
    string sessionId = 6;
    string paymentDate=7;
    string description =8 ;
    string reciept = 9;

}

message ResponseSessions {
    repeated SessionInfo sessions= 1;
}

message SessionInfo {
    string id = 1;
    string session_id =2;
    string status = 3;
    repeated OrderInfo orders = 4;
}


// баланс
message WalletDetails {
    uint64 amount = 1;
    string currency = 2;
}

message Error {
    string code = 1;
    string description = 2;
}

message BalanceResponse {
    string status=1;
    repeated WalletDetails wallets = 2;
    optional Error error = 3;
}

message BalanceRequest {
    string bank = 1; // банк, по умолчанию банк 131
}

// проверка самозанятого

message TaxReference {
    uint64 taxReference = 1; // одного символа не хватило до uint32
    string bank = 2; // банк, по умолчанию банк 131

}


message CheckCheckSelfEmployedResponse {
    string status = 1;
    optional  Error error = 2;
    optional  SelfEmployedDetails details = 3;
}

message SelfEmployedDetails {
    bool isBind = 1;
    bool isSelfEmployed = 2;
}

// подтверждение/отмена платежа

message Transaction {
    string transactionId = 1;
    string bank = 2; // банк, по умолчанию банк 131

}

message ConfirmOrCancelResponse {
    string status = 1;
    optional  Error error = 2;
}

//Создание сессии
message PaymentSessionRequest {
    uint64 amount = 1;
    Payer payer = 2;
    string paymentType = 3;
    PaymentDetails details = 4;
    string recipientFullName = 5;
    repeated Service services = 6;
    string bank = 7; // банк, по умолчанию банк 131

}

message PaymentDetails {
    oneof paymenMethod {
        CardTokens cardTokens = 1;
        BankAccount bankAccount = 2;
    }
}

message BankAccount {
    string bik = 1;
    string bankAccount = 2;
    string fullName = 3;
    string description = 4;
}

message Service {
    string name = 1;
    uint64 amount = 2;
}

message CardTokens {
    string numberHash = 1;
    string expirationDateHash = 2;
    string cardholderNameHash = 3;
    string securityCodeHash = 4;
    string widgetToken = 5;
}

message Payer {
    uint32 payerId = 1;
    string payerType = 2;
    string payerName = 3;
    uint64 payerTaxNumber = 4;
}

message PaymentSessionResponse {
    string status = 1;
    optional  Error error = 2;
    optional  string sessionId = 3;
}

//Создание сессии и получение токена карты
message TokenRequest {
    string bank = 1; // банк, по умолчанию банк 131

}

message TokenResponse {
    string status = 1;
    optional  Error error = 2;
    optional  string publicToken = 3;
}

message RequestInfo {
    repeated string orderPaymentId = 1;
}

message ResponseInfo {
    string status = 1;
    optional Error error = 2;
    repeated OrderInfo ordersId = 3;
}